--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <canvas id="canvas1" width="800px" height="500px"></canvas>
+    <div id="div1">
+        <h1 id="score">Score:</h1>
+        <div id="div2">
+            <button id="start">Start</button>
+            <button id="pause">Pause</button>
+        </div>
+    </div>
 </body>
 </html>
