--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
+    <meta name="description" content="Play Online Snake Game Free">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <canvas id="canvas1" width="800px" height="500px"></canvas>
-    <div id="div1">
-        <h1 id="score">Score:</h1>
-        <div id="div2">
-            <button id="start">Start</button>
-            <button id="pause">Pause</button>
+    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas></center>
+    <center>
+        <div id="div1">
+            <center>
+                <h1 id="score">Score: </h1>
+                <div id="div2">
+                    <button id="start">Start</button>
+                    <button id="pause">Pause</button>
+            </center>
+            </div>
         </div>
-    </div>
+    </center>
+    <script src="js/script.js"></script>
 </body>
 </html>
