--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas></center>
+    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas><br><p>Prees arrow keys to Snake move!</p></center>
     <center>
         <div id="div1">
             <center>
