--- a/index.html
+++ b/index.html
@@ -8,16 +8,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas><br><p>Prees arrow keys to Snake move!</p></center>
+    <center>
+        <div id="div2">
+            <button id="start">Start</button>
+            <button id="pause">Pause</button>
+    </center>
+    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas><p>Prees arrow keys to Snake move!</p></center>
     <center>
         <div id="div1">
             <center>
                 <h1 id="score">Score: </h1>
-                <div id="div2">
-                    <button id="start">Start</button>
-                    <button id="pause">Pause</button>
+                
             </center>
             </div>
+        </div>
+    </center>
+    <br>
+    <center>
+        <div id="arrowsbg">
+            <center><button id="buttUp">UP</button></center>
+            <br>
+            <center>
+                <button id="buttLeft">LEFT</button>
+                
+                <button id="buttRight">RIGHT</button>
+            </center>
+            <br>
+            <center><button id="buttDown">DOWN</button></center>
         </div>
     </center>
     <script src="js/script.js"></script>
