add bg, fix latters, button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button id="start">Start</button>
             <button id="pause">Pause</button>
     </center>
-    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas><p>Prees below nevigation keys to Snake move!Use keybord if you plaing on PC</p></center>
+    <center><canvas id="canvas1" class="canvas1" width="300px" height="300px"></canvas><p id="note">If you plaing on mobile Use nevigation keys below to Snake move! Use keybord if you plaing on PC</p></center>
     <center>
         <div id="div1">
             <center>
